# rust-clock

./: Cargo.toml  LICENSE  README.md
.github/workflows/: publish.yml
assets/: demo.tape
crates/sigye/: Cargo.toml
crates/sigye-background/: Cargo.toml
crates/sigye-background/src/: chars.rs  color.rs  lib.rs  state.rs
crates/sigye-background/src/animations/: matrix.rs  mod.rs  reactive.rs  snow.rs  stateless.rs  weather.rs
crates/sigye-config/src/: lib.rs
crates/sigye-core/: Cargo.toml
crates/sigye-core/src/: lib.rs
crates/sigye-fonts/: Cargo.toml
crates/sigye-fonts/src/: bundled.rs  lib.rs
crates/sigye/src/: background.rs  main.rs  settings.rs  system_metrics.rs  weather.rs
src/: main.rs
